<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_GCM" Id="{d03d0435-a8a4-4ab2-9d39-a304a183952d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_GCM
VAR_IN_OUT
	{attribute 'pytmc' := '
    pv: 
	'}
	VG	:	ST_VG;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	rMinPressure: REAL;
	rV	:REAL;
	
	(*IO*)
	i_iPRESS_R AT%I* :INT; // input Pressure // Link to analog Input
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Baratron Pressure Calc 
A. Wallace
2016-6-16
The full-scale pressure times the ratio of the meas.
voltage to full-scale voltage (10V).
The minimum pressure is always going to be 5e-4 * F.S.V.*)

rMinPressure := VG.rFULL_SCALE * 5E-4;


rV :=MAX((10*INT_TO_REAL(VG.i_iPRESS_R)/32767),0);
VG.rPRESS := (VG.rFULL_SCALE/10)*rV;
IF VG.rPRESS > rMinPressure THEN
	VG.xPRESS_OK := TRUE;
ELSE
	VG.xPRESS_OK := FALSE;
END_IF

(*IO soft linking*)
ACT_IO();]]></ST>
    </Implementation>
    <Action Name="ACT_IO" Id="{c1214d74-d1dc-47d0-8d43-06819891a8d4}">
      <Implementation>
        <ST><![CDATA[VG.i_iPRESS_R :=i_iPRESS_R;]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_GCM">
      <LineId Id="3" Count="15" />
      <LineId Id="35" Count="2" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_GCM.ACT_IO">
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>